fix(ci): Update kernel matrix to include 6.6 and 6.8 versions
- Add kernel 6.6 to matrix (with fallback to 6.5 if unavailable)
- Add kernel 6.8 to matrix (available in Ubuntu repos)
- Update total matrix combinations from 13 to 19
- Add special handling for kernel 6.6 availability

Note: Kernel 6.6.48 specifically is not available in standard Ubuntu
repositories used by GitHub Actions. The workflow will attempt to find
any 6.6.x version and fall back to 6.5 if none are available.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
           '5.15',
           '6.1',
           '6.5',
+          '6.6',
+          '6.8',
           'latest'
         ]
         gcc: ['9', '11', '12']
@@ -86,11 +88,29 @@ jobs:
           KERNEL_VERSION=$(uname -r)
           echo "Using current kernel: $KERNEL_VERSION"
         else
-          # Find latest minor version for the major version specified
-          KERNEL_VERSION=$(apt-cache search linux-headers-${{ matrix.kernel }} | \
-                          grep -E "linux-headers-${{ matrix.kernel }}\.[0-9]+-[0-9]+-generic" | \
-                          sort -V | tail -1 | awk '{print $1}' | \
-                          sed 's/linux-headers-//')
+          # Special handling for kernel 6.6 which might not be available
+          if [ "${{ matrix.kernel }}" = "6.6" ]; then
+            echo "::warning::Kernel 6.6 not available in standard Ubuntu repos, trying alternatives..."
+            # Try to find 6.6 or fall back to closest available
+            KERNEL_VERSION=$(apt-cache search linux-headers-6.6 | \
+                            grep -E "linux-headers-6\.6\.[0-9]+-[0-9]+-generic" | \
+                            sort -V | tail -1 | awk '{print $1}' | \
+                            sed 's/linux-headers-//')
+            if [ -z "$KERNEL_VERSION" ]; then
+              echo "::warning::Kernel 6.6 not found, using 6.5 as fallback"
+              KERNEL_VERSION=$(apt-cache search linux-headers-6.5 | \
+                              grep -E "linux-headers-6\.5\.[0-9]+-[0-9]+-generic" | \
+                              sort -V | tail -1 | awk '{print $1}' | \
+                              sed 's/linux-headers-//')
+            fi
+          else
+            # Find latest minor version for the major version specified
+            KERNEL_VERSION=$(apt-cache search linux-headers-${{ matrix.kernel }} | \
+                            grep -E "linux-headers-${{ matrix.kernel }}\.[0-9]+-[0-9]+-generic" | \
+                            sort -V | tail -1 | awk '{print $1}' | \
+                            sed 's/linux-headers-//')
+          fi
+          
           if [ -z "$KERNEL_VERSION" ]; then
             echo "::error::Could not find kernel headers for ${{ matrix.kernel }}"
             exit 1
