--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
   build-test:
     name: Build Test - Kernel ${{ matrix.kernel }}
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Overall job timeout
     strategy:
       matrix:
         kernel: ['6.1', '6.6', '6.8']
@@ -108,25 +109,33 @@ jobs:
             libssl-dev libelf-dev
       
       - name: Download kernel headers
+        timeout-minutes: 3
         run: |
           wget -q https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${{ matrix.kernel }}.tar.xz
           tar -xf linux-${{ matrix.kernel }}.tar.xz
       
       - name: Configure kernel
+        timeout-minutes: 2
         run: |
           cd linux-${{ matrix.kernel }}
+          # Use minimal config for faster builds
           if [ "${{ matrix.arch }}" = "arm" ]; then
             export ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf-
-            make multi_v7_defconfig
+            make allnoconfig
           elif [ "${{ matrix.arch }}" = "arm64" ]; then
             export ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu-
-            make defconfig
+            make allnoconfig
           else
-            make defconfig
+            make allnoconfig
           fi
+          # Enable only what's needed for module building
+          echo "CONFIG_MODULES=y" >> .config
+          echo "CONFIG_NET=y" >> .config
+          echo "CONFIG_ETHERNET=y" >> .config
           echo "CONFIG_ADIN2111=m" >> .config
       
       - name: Build ADIN2111 module
+        timeout-minutes: 5
         run: |
           cd linux-${{ matrix.kernel }}
           if [ "${{ matrix.arch }}" = "arm" ]; then
@@ -134,12 +143,13 @@ jobs:
           elif [ "${{ matrix.arch }}" = "arm64" ]; then
             export ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu-
           fi
-          make modules_prepare
+          # Quick modules_prepare with minimal config
+          make modules_prepare -j$(nproc)
           # Copy our driver source to kernel tree
           mkdir -p drivers/net/ethernet/adi
           cp -r ../drivers/net/ethernet/adi/adin2111/* drivers/net/ethernet/adi/
-          # Build the module
-          make M=drivers/net/ethernet/adi modules || true
+          # Build the module with parallel jobs
+          make M=drivers/net/ethernet/adi modules -j$(nproc) || true
       
       - name: Check module info
         run: |
