fix: Use single Docker image tag to resolve container pull error
The test jobs were failing with 'invalid reference format' because the
container image field was receiving multiple tags from the metadata action.
This fix extracts only the first tag from the JSON output to provide a
single valid image reference.

--- a/.github/workflows/qemu-test.yml
+++ b/.github/workflows/qemu-test.yml
@@ -37,7 +37,7 @@ jobs:
       contents: read
       packages: write
     outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
+      image-tag: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
     
     steps:
       - name: Checkout
